--- a/adventure_booking.html
+++ b/adventure_booking.html
@@ -65,7 +65,7 @@
                             <label for="check-in">Date:</label>
                         </section>
                         <section class="cheack_btn_flex">
-                            <input type="date" name="check-in" id="check-in" aria-label="Date">
+                            <input type="date" name="check-in" id="check-in" aria-label="Date"/>
                         </section>
                     </section>
                     <section class="cheack_btn">
@@ -73,7 +73,7 @@
                             <label for="check-out">Time:</label>
                         </section>
                         <section class="cheack_btn_flex">
-                            <input type="time" name="check_time" id="check_time" aria-label="Time">
+                            <input type="time" name="check_time" id="check_time" aria-label="Time"/>
                         </section>
                     </section>
                 </section>
@@ -85,7 +85,7 @@
                             <label for="first name">Infant (Age 0-2)</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="guest_phone" id="guest_phone" aria-label="Infant" maxlength="20" placeholder="Ex. 2">                    
+                            <input type="text" name="guest_phone" id="guest_phone" aria-label="Infant" maxlength="20" placeholder="Ex. 2"/>                    
                         </section> 
                     </section>
                     <section class="name_titel">
@@ -93,7 +93,7 @@
                             <label for="last name">Child (Age 3-11)</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="guest_address" id="guest_address" aria-label="Child" maxlength="20" placeholder="Ex. 0">
+                            <input type="text" name="guest_address" id="guest_address" aria-label="Child" maxlength="20" placeholder="Ex. 0"/>
                         </section>
                     </section>
                     <section class="name_titel">
@@ -101,7 +101,7 @@
                             <label for="last name">adults (Age 12+)</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="guest_email" id="guest_email" aria-label="Adults" maxlength="20" placeholder="Ex. 0">
+                            <input type="text" name="guest_email" id="guest_email" aria-label="Adults" maxlength="20" placeholder="Ex. 0"/>
                         </section>
                     </section>  
                 </section>
@@ -133,7 +133,7 @@
                             <label for="first name">First Name</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="first_name" id="first_name" aria-label="First name">
+                            <input type="text" name="first_name" id="first_name" aria-label="First name"/>
                         </section>        
                     </section>
                     <section class="name_titel">
@@ -141,7 +141,7 @@
                             <label for="last name">Last Name</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="Last_name" id="Last_name" aria-label="Last name">
+                            <input type="text" name="Last_name" id="Last_name" aria-label="Last name"/>
                         </section>        
                     </section>
                     <section class="name_titel">
@@ -412,7 +412,7 @@
                             <label for="last name">Language</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="guest_language" id="guest_language" aria-label="Language" placeholder="language 01, language 02">
+                            <input type="text" name="guest_language" id="guest_language" aria-label="Language" placeholder="language 01, language 02"/>
                         </section>
                     </section>
                     <section class="name_titel">
@@ -420,7 +420,7 @@
                             <label for="first name">Phone</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="guest_phone" id="guest_phone" aria-label="Phone number" maxlength="20" placeholder="+94710000000">                    
+                            <input type="text" name="guest_phone" id="guest_phone" aria-label="Phone number" maxlength="20" placeholder="+94710000000"/>                    
                         </section> 
                     </section>
                     <section class="name_titel">
@@ -428,7 +428,7 @@
                             <label for="last name">Email</label>
                         </section>
                         <section class="name_flex">
-                            <input type="text" name="guest_email" id="guest_email" aria-label="Email" placeholder="help@example.com">
+                            <input type="text" name="guest_email" id="guest_email" aria-label="Email" placeholder="help@example.com"/>
                         </section>
                     </section>  
                 </section>
@@ -445,21 +445,21 @@
                                 <label for="adults"><h4>Promotion code</h4></label>
                             </section>
                             <section class="cheack_btn_flex">
-                                <input type="number" name="promo" id="promo" aria-label="Promo code">
+                                <input type="number" name="promo" id="promo" aria-label="Promo code"/>
                             </section>
                         </section>
                     </section>
                     <section class="payment_method_flex">
                         <section class="payment_method_type">
-                            <input type="radio" id="credit_card" name="payment_method" value="credit_card" aria-label="Credit card">
+                            <input type="radio" id="credit_card" name="payment_method" value="credit_card" aria-label="Credit card"/>
                             <label for="credit_card">Credit Card</label>
                         </section>
                         <section class="payment_method_type">
-                            <input type="radio" id="debit_card" name="payment_method" value="debit_card" aria-label="Debit card">
+                            <input type="radio" id="debit_card" name="payment_method" value="debit_card" aria-label="Debit card"/>
                             <label for="debit_card">Debit Card</label>
                         </section>
                         <section class="payment_method_type">
-                            <input type="radio" id="paypal" name="payment_method" value="paypal" aria-label="PayPal">
+                            <input type="radio" id="paypal" name="payment_method" value="paypal" aria-label="PayPal"/>
                             <label for="paypal">Paypal</label>
                         </section>
                     </section>
@@ -474,18 +474,18 @@
                         </section>
                         <section class="payment_card_details">
                             <section>
-                                <input type="text" name="Card Holder Name" id="Card_Holder_Name" aria-label="Card holder name" maxlength="30">
+                                <input type="text" name="Card Holder Name" id="Card_Holder_Name" aria-label="Card holder name" maxlength="30"/>
                             </section>
                             <section>
-                                <input type="number" name="card_number" id="card_number" aria-label="Card number" maxlength="16" placeholder="   1234 5678 9012 3456">
+                                <input type="number" name="card_number" id="card_number" aria-label="Card number" maxlength="16" placeholder="   1234 5678 9012 3456"/>
                             </section>
                             <section>
                                 <section style="padding: 0;">
-                                    <input type="number" name="card_holder_name" class="card_expire_num" id="card_expire_num" aria-label="Expire date" maxlength="2" placeholder="    12" ><h2 style="padding: 20px 10px 5px 10px;">/</h2><input type="number" name="card_holder_name" id="card_expire_num" maxlength="2" placeholder="    12">
+                                    <input type="number" name="card_holder_name" class="card_expire_num" id="card_expire_num" aria-label="Expire date" maxlength="2" placeholder="    12" /><h2 style="padding: 20px 10px 5px 10px;">/</h2><input type="number" name="card_holder_name" id="card_expire_num" maxlength="2" placeholder="    12"/>
                                 </section>
                             </section>
                             <section>
-                                <input type="number" name="security_code" class="card_expire_num" id="card_expire_num" aria-label="Security code" maxlength="8" placeholder="  123">
+                                <input type="number" name="security_code" class="card_expire_num" id="card_expire_num" aria-label="Security code" maxlength="8" placeholder="  123"/>
                                 <section class="pay_btn">
                                     <a href="#"><button type="submit" class="btn">Pay Now</button></a>
                                 </section>
