--- a/room_booking.html
+++ b/room_booking.html
@@ -1306,15 +1306,7 @@
                                     <tbody>
                                         <tr>
                                             <td>Total of Accommodation</td>
-                                            <td>LKR <span x-text="total_accommodation_cost"></span></td>
-                                        </tr>
-                                        <!-- <tr>
-                                                <td>Total Discount</td>
-                                                <td>LKR <span x-text="favorite.total_discount"></span></td>
-                                            </tr> -->
-                                        <tr>
-                                            <td><b>Final Total</b></td>
-                                            <td><b>LKR <span x-text="favorite.final_total"></span></td></b>
+                                            <td>LKR <span x-text="favorite.final_accommodation_cost"></span></td>
                                         </tr>
                                 </table>
                                 <button class="btn width_200" style="margin-left: auto; margin-top: 25px; width: 315px;"
