recreate adventure section in booking

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <a href="#"><img src="images/Home/Main_Logo_02.webp" alt="hotel logo"></a>
         </section>
         <section id="booking_btn">
-            <a href="/room_booking.html" target="_self" class="book-button" id="booking">book now</a>
+            <a href="/room_booking.html" target="_blank" class="book-button" id="booking">book now</a>
             
         </section>
     </header>
